sandbox-codebase/objects/Asset/Asset.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>