sandbox-codebase/objects/Asset/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <label>Asset Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Huxley</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>