sandbox-codebase/objects/Asset/fields/Failed_Studies__c.field-meta.xml
<CustomField>
    <fullName>Failed_Studies__c</fullName>
    <label>Failed Studies</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>