sandbox-codebase/objects/Asset/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1.2.2</fullName>
            </value>
            <value>
                <fullName>Cellular</fullName>
                <default>true</default>
                <label>Cellular</label>
            </value>
            <value>
                <fullName>v2.0.5</fullName>
            </value>
            <value>
                <fullName>2.1.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>