sandbox-codebase/objects/Asset/fields/Number_of_Uses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Uses__c</fullName>
    <label>Number of Uses</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>