sandbox-codebase/objects/Asset/fields/Study_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Study_Success_Rate__c</fullName>
    <formula>Successful_Studies__c / (Failed_Studies__c + Successful_Studies__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Success Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>