sandbox-codebase/objects/Asset/fields/Successful_Studies__c.field-meta.xml
<CustomField>
    <fullName>Successful_Studies__c</fullName>
    <label>Successful Studies</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>