sandbox-codebase/objects/Asset/listViews/Available_Pods.listView-meta.xml
<ListView>
    <fullName>Available_Pods</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Asset_Location__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Number_of_Uses__c</columns>
    <columns>Successful_Studies__c</columns>
    <columns>Failed_Studies__c</columns>
    <columns>Study_Success_Rate__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Firmware_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Asset_Location__c</field>
        <operation>equals</operation>
        <value>Huxley,Field</value>
    </filters>
    <label>Available Pods</label>
</ListView>